--- a/app/src/main/res/layout/fragment_public_tender.xml
+++ b/app/src/main/res/layout/fragment_public_tender.xml
@@ -90,6 +90,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@color/colorOnPrimary"
             android:padding="16dp">
 
             <androidx.appcompat.widget.AppCompatImageView
