--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:fillViewport="true">
+
+    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
         <androidx.constraintlayout.widget.Guideline
             android:id="@+id/profile_fragment_guideline_horizontal_top"
@@ -48,7 +52,7 @@
         </com.google.android.material.textfield.TextInputLayout>
 
         <Button
-            android:id="@+id/profile_fragment_updatePassword"
+            android:id="@+id/profile_fragment_update_password_button"
             style="@style/elevationButton"
             android:text="@string/user_profile_fragment_update_password_button_text"
             app:layout_constraintEnd_toEndOf="parent"
@@ -62,7 +66,7 @@
             android:text="@string/user_profile_fragment_finished_button_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/profile_fragment_updatePassword" />
+            app:layout_constraintTop_toBottomOf="@id/profile_fragment_update_password_button" />
 
 
         <androidx.constraintlayout.widget.Guideline
@@ -115,3 +119,4 @@
             app:layout_constraintTop_toBottomOf="@id/profile_fragment_divider_bottom" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
